--- a/src/actions/develop/actions/M1 - Message.yaml
+++ b/src/actions/develop/actions/M1 - Message.yaml
@@ -57,3 +57,9 @@ fields:
     type: varbin
     varSize: medium
     example: "Hello world!"
+
+  - name: MessagePayloadVersion
+    label: Message Payload Version
+    description: "This field is set by the decoder and should not be set outside of that. The version of the encoding of the payload. v0 is protobuf and v1 is BSOR."
+    type: uint
+    size: 1
