--- a/src/actions/develop/actions/G1 - Proposal.yaml
+++ b/src/actions/develop/actions/G1 - Proposal.yaml
@@ -8,7 +8,7 @@ label: Proposal
 description: "Allows the Administration/Token Holders to propose a change (aka Initiative/Shareholder vote).  A significant cost - specified in the Contract Formation - can be attached to this action when sent from Token Holders to reduce spam, as the resulting vote will be put to all token owners."
 
 metadata:
-  validation: Contract/Instrument Amendment or nothing
+  validation: Vote
   rejection: Rejection
 
   inputs:
