--- a/src/actions/develop/types/ReferenceTransaction.yaml
+++ b/src/actions/develop/types/ReferenceTransaction.yaml
@@ -13,7 +13,10 @@ fields:
 
   - name: Outputs
     label: Outputs
-    description: "The bitcoin outputs corresponding to the inputs for the transaction. Serialized in bitcoin P2P format. There must be the same count as there are inputs in the contained transaction and they must be in the same order."
+    description: >
+      The bitcoin outputs corresponding to the inputs for the transaction. Serialized in bitcoin P2P
+      format. There must be the same count as there are inputs in the contained transaction and they
+      must be in the same order."
     type: varbin[]
     varSize: large
     listSize: medium
