--- a/src/actions/develop/actions/E1 - Order.yaml
+++ b/src/actions/develop/actions/E1 - Order.yaml
@@ -11,7 +11,7 @@ label: Order
 description: Used by the administration to signal to the smart contract that the tokens that a particular public address(es) owns are to be confiscated, frozen, thawed or reconciled.
 
 metadata:
-  validation: InstrumentCreation
+  validation: Freeze,Thaw,Confiscation,Reconciliation
   rejection: Rejection
 
   inputs:
@@ -27,7 +27,7 @@ metadata:
 fields:
   - name: ComplianceAction
     label: Compliance Action
-    description: "Freeze (F), Thaw (T), Confiscate (C), Reconcile (R)"
+    description: "Freeze (F), Thaw (T), Confiscate (C), Deprecated Reconcile (R)"
     type: fixedchar
     size: 1
     example: "F"
