--- a/src/actions/develop/actions/G3 - Ballot Cast.yaml
+++ b/src/actions/develop/actions/G3 - Ballot Cast.yaml
@@ -8,7 +8,7 @@ label: Ballot Cast
 description: "Used by Token Owners to cast their ballot (vote) on proposals. 1 Vote per token unless a vote multiplier is specified in the relevant Instrument Definition action."
 
 metadata:
-  nvalidation: BallotCounted
+  validation: BallotCounted
   rejection: Rejection
 
   inputs:
