Change Credit Note code from CRD to CRN.

--- a/src/instruments/develop/utility/CRN - Credit Note.yaml
+++ b/src/instruments/develop/utility/CRN - Credit Note.yaml
@@ -1,8 +1,8 @@
 #
-# CRD - Credit Note
+# CRN - Credit Note
 #
 
-code: CRD
+code: CRN
 name: CreditNote
 label: Credit Note
 description: A credit for a specified value in currency.
