Increase rejection address index limit.

--- a/src/actions/develop/actions/M2 - Rejection.yaml
+++ b/src/actions/develop/actions/M2 - Rejection.yaml
@@ -24,6 +24,7 @@ fields:
     description: "Associates the message to a particular output by the index. If none are specified then the first output is assumed."
     type: uint[]
     size: 4
+    listSize: medium
 
   - name: RejectAddressIndex
     label: Reject Address Index
