Rename Coupon to DiscountCoupon. Deprecate LoyaltyPoints for RewardPoints.

--- a/src/instruments/develop/utility/COU - Coupon.yaml
+++ b/src/instruments/develop/utility/COU - Coupon.yaml
@@ -3,8 +3,8 @@
 #
 
 code: COU
-name: Coupon
-label: Coupon
+name: DiscountCoupon
+label: Discount Coupon
 description: A voucher entitling the holder to a discount on a particular product or service.
 
 metadata:
