Remove name from CRN Credit Note.

--- a/src/instruments/develop/utility/CRN - Credit Note.yaml
+++ b/src/instruments/develop/utility/CRN - Credit Note.yaml
@@ -16,7 +16,7 @@ metadata:
 fields:
   - name: Name
     label: Name
-    type: varchar
+    type: deprecated
     varSize: tiny
 
   - name: FaceValue
