Use cyrillic for Bulgarian Lev

--- a/src/resources/develop/Currencies.yaml
+++ b/src/resources/develop/Currencies.yaml
@@ -157,7 +157,7 @@ values:
     name: BulgarianLev
     label: Bulgarian lev
     metadata:
-      symbol: "lev"
+      symbol: "лв"
       precision: 2
       fractional_unit: stotinka
       polity:
