--- a/src/instruments/develop/types/FixedCurrencyValue.yaml
+++ b/src/instruments/develop/types/FixedCurrencyValue.yaml
@@ -31,12 +31,12 @@ fields:
   - name: Precision
     label: Precision
     description: >
-        Required field to specify the decimal precision of the value. It will normally be the
-        "precision" value associated with the Currency. It is the number of decimal places between
-        the number of tokens and the common unit of measure. For example, in AUD, the common unit is
-        the dollar, but a token would only be worth a penny. So the precision should be 2 for the
-        two decimal places in a dollar amount "$1.00". In this scenario 100 tokens are worth $1.
+        Specify the decimal precision of the value. It will normally be the "precision" value
+        associated with the Currency. It is the number of decimal places between the number of
+        tokens and the common unit of measure. For example, in AUD, the common unit is the dollar,
+        but a token would only be worth a penny. So the precision should be 2 for the two decimal
+        places in a dollar amount "$1.00". In this scenario 100 tokens are worth $1. Zero is assumed
+        if no value is specified.
     type: uint
-    required: true
     size: 1
     example: 2
