--- a/src/messages/develop/commercial/1003 - Settlement Request.yaml
+++ b/src/messages/develop/commercial/1003 - Settlement Request.yaml
@@ -29,3 +29,9 @@ fields:
     description: "Serialized settlement OP_RETURN that needs data added by another contract."
     type: varbin
     varSize: medium
+
+  - name: TransferFees
+    label: Transfer Fees
+    description: "Transfer fees (in bitcoin) and addresses(PKHs) where fees should be paid. Added by each contract as settlement data is added."
+    type: TargetAddress[]
+    listSize: small
