Add address field to fee field for transfer fees.

--- a/src/actions/develop/types/Fee.yaml
+++ b/src/actions/develop/types/Fee.yaml
@@ -4,6 +4,12 @@ label: Fee
 description: A fee paid for a service. Only bitcoin currently supported as the instrument.
 
 fields:
+  - name: Address
+    label: Address
+    description: "The address to receive the fee."
+    type: Address
+    required: true
+
   - name: Quantity
     label: Quantity
     description: "The quantity of tokens of the specified instrument to be paid."
