--- a/src/actions/develop/types/Fee.yaml
+++ b/src/actions/develop/types/Fee.yaml
@@ -16,3 +16,26 @@ fields:
     type: uint
     size: 8
     example: 100
+
+  - name: UseCurrentInstrument
+    label: Use Current Instrument
+    description: >
+      When true this means the fee quantity is paid in the current instrument's tokens.
+      For example, for transfer fees the transfer fee is paid by including extra sender quantity of the instrument being transfered.
+      When using the current instrument this should not be specified via the InstrumentCode field below as the instrument code value is not known for certain until the instrument is created and this field can be specified at instrument definition.
+    type: bool
+    example: true
+
+  - name: Contract
+    label: Contract
+    description: >
+      This feature is not supported by the reference implementation yet but the field is included for backwards compatibility so when support is added the quantity will not be mistaken for a bitcoin quantity by older clients.
+      The contract containing the instrument's tokens that should be used for the fee.
+    type: Address
+
+  - name: InstrumentCode
+    label: Instrument Code
+    description: >
+      This feature is not supported by the reference implementation yet but the field is included for backwards compatibility so when support is added the quantity will not be mistaken for a bitcoin quantity by older clients.
+      The instrument code identifying the instrument's tokens that should be used for the fee.
+    type: InstrumentCode
